<resources>
    <string name="app_name">Trash to Treasure</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="email">Silahkan masukan email</string>
    <string name="password">Silahkan masukan password</string>
    <string name="btn_login">Login</string>
    <string name="password_tv">Password:</string>
    <string name="email_tv">Email:</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar disini</string>
    <string name="name_tv">Nama:</string>
    <string name="name">Silahkan masukan nama</string>
    <string name="sudah_punya_akun">"Sudah punya akun? "</string>
    <string name="masuk">Masuk</string>


    <string name="title_menu_1">Kurikulum Standar Industri Global</string>
    <string name="title_menu_2">Belajar Fleksibel Sesuai Jadwal Anda</string>
    <string name="title_menu_3">Code Review dari Developer Expert</string>
    <string name="title_menu_4">Alumni Terpercaya di Berbagai Perusahaan</string>
    <string name="desc_menu_1">Kurikulum dikembangkan bersama perusahaan dan pemilik teknologi dunia sesuai kebutuhan industri terkini.</string>
    <string name="desc_menu_2">Belajar kapan pun, di mana pun, secara mandiri. Bebas memilih kelas sesuai minat belajar. Akses seumur hidup ke kelas dan forum diskusi setelah lulus.</string>
    <string name="desc_menu_3">Validasi skill Anda melalui 1-on-1 Professional Code Review yang diberikan langsung oleh Developer Expert.</string>
    <string name="desc_menu_4">Sertifikat yang membuktikan pengetahuan fundamental beserta keterampilan nyata yang diinginkan perusahaan global.</string>
    <string name="learn_now">Belajar Sekarang</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_camera">Camera</string>
    <string name="title_list">List</string>
    <string name="title_profile">Profile</string>
    <string name="title">Article Title</string>
    <string name="published_date">May 22, 2023</string>
    <string name="save_bookmark">Save</string>
    <string name="error_occurred">Cannot load data</string>
    <string name="profile_name">Bayu Afriyadi</string>
    <string name="profile_email">bayuafriyadi5@gmail.com</string>
    <string name="preferences">Preferences</string>
    <string name="notifications">Notifications</string>
    <string name="feedback">Feedback</string>
    <string name="home_name">Hi,Ujang maman</string>
    <string name="artikel_title">Artikel</string>
</resources>